--- a/src/modeledit.ui
+++ b/src/modeledit.ui
@@ -35,7 +35,7 @@
    <item row="3" column="1">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>10</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="tabModelSetup">
       <attribute name="title">
@@ -648,6 +648,9 @@
        <string>Heli Setup</string>
       </attribute>
       <layout class="QFormLayout" name="formLayout_2">
+       <property name="fieldGrowthPolicy">
+        <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+       </property>
        <item row="0" column="0">
         <widget class="QLabel" name="label_103">
          <property name="text">
@@ -1944,6 +1947,12 @@ Right</string>
           </item>
           <item row="1" column="0" colspan="2">
            <widget class="QLabel" name="label_47">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>21</height>
+             </size>
+            </property>
             <property name="text">
              <string>Switch1</string>
             </property>
