--- a/trunk/src/eepskye/src/simulatordialog.ui
+++ b/trunk/src/eepskye/src/simulatordialog.ui
@@ -40,6 +40,18 @@
        <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
         <item row="1" column="2">
          <widget class="QSlider" name="trimVLeft">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>240</height>
+           </size>
+          </property>
           <property name="minimum">
            <number>-125</number>
           </property>
@@ -65,6 +77,12 @@
             <height>240</height>
            </size>
           </property>
+          <property name="maximumSize">
+           <size>
+            <width>240</width>
+            <height>240</height>
+           </size>
+          </property>
           <property name="verticalScrollBarPolicy">
            <enum>Qt::ScrollBarAlwaysOff</enum>
           </property>
@@ -72,7 +90,7 @@
            <enum>Qt::ScrollBarAlwaysOff</enum>
           </property>
           <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -478,6 +496,18 @@ QPushButton:checked {
        <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0">
         <item row="1" column="0">
          <widget class="QSlider" name="trimVRight">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>240</height>
+           </size>
+          </property>
           <property name="minimum">
            <number>-125</number>
           </property>
@@ -503,6 +533,12 @@ QPushButton:checked {
             <height>240</height>
            </size>
           </property>
+          <property name="maximumSize">
+           <size>
+            <width>240</width>
+            <height>240</height>
+           </size>
+          </property>
           <property name="verticalScrollBarPolicy">
            <enum>Qt::ScrollBarAlwaysOff</enum>
           </property>
@@ -510,7 +546,7 @@ QPushButton:checked {
            <enum>Qt::ScrollBarAlwaysOff</enum>
           </property>
           <property name="alignment">
-           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -518,6 +554,12 @@ QPushButton:checked {
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
            <widget class="QPushButton" name="switchTRN">
+            <property name="minimumSize">
+             <size>
+              <width>27</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
      background-color: #EEEEEE;
