bug fixes(see changelog), review burn output, eepskye add logging

--- a/src/eepskye/src/modeledit.ui
+++ b/src/eepskye/src/modeledit.ui
@@ -54,7 +54,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>10</number>
      </property>
      <widget class="QWidget" name="tabModelSetup">
       <attribute name="title">
@@ -11055,6 +11055,55 @@ Right</string>
            <property name="alignment">
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
            </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_1612">
+           <property name="maximumSize">
+            <size>
+             <width>100</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Logging Switch</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QComboBox" name="LogSwitchCB"/>
+         </item>
+         <item row="1" column="2">
+          <widget class="QLabel" name="label_1622">
+           <property name="maximumSize">
+            <size>
+             <width>100</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Logging Rate</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="3">
+          <widget class="QComboBox" name="LogRateCB">
+           <item>
+            <property name="text">
+             <string>1.0 Sec</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>2.0 Sec</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
